[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/level_select.gd" type="Script" id=1]
[ext_resource path="res://theme/pexels.tex" type="Texture" id=2]
[ext_resource path="res://fonts/metal lord.fnt" type="BitmapFont" id=3]

[node name="level_select" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 390.0
margin/top = 40.0
margin/right = 617.0
margin/bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "Dark Matter Simulator"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="simple_dark_matter" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 200.0
margin/right = 289.0
margin/bottom = 231.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Simple Dark Matter"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="grey_dark_matter" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 250.0
margin/right = 278.0
margin/bottom = 281.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Grey Dark Matter"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter_hue_50" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 300.0
margin/right = 308.0
margin/bottom = 331.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark Matter (Hue 50)"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter_hue_170" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 350.0
margin/right = 315.0
margin/bottom = 381.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark Matter (Hue 170)"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter_toaster" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 200.0
margin/right = 694.0
margin/bottom = 231.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark Matter (Toaster Filter)"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="blue_dark_matter" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 250.0
margin/right = 580.0
margin/bottom = 281.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Blue Dark Matter"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter_temp" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 300.0
margin/right = 822.0
margin/bottom = 331.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark Matter (Temperature Visualization)"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter_density" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 350.0
margin/right = 822.0
margin/bottom = 381.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark Matter (Temperature Visualization)"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="dark_matter_galaxy" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 400.0
margin/right = 621.0
margin/bottom = 430.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark Matter: Galaxy"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="back_to_menu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 820.0
margin/top = 40.0
margin/right = 961.0
margin/bottom = 71.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.0750422, 0.976563, 0.0228882, 1 )
custom_colors/font_color_pressed = Color( 0.957031, 0.037384, 0.037384, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back to Menu"
flat = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="simple_dark_matter" to="." method="_on_simple_dark_matter_pressed"]

[connection signal="pressed" from="grey_dark_matter" to="." method="_on_grey_dark_matter_pressed"]

[connection signal="pressed" from="dark_matter_hue_50" to="." method="_on_dark_matter_hue_50_pressed"]

[connection signal="pressed" from="dark_matter_hue_170" to="." method="_on_dark_matter_hue_170_pressed"]

[connection signal="pressed" from="dark_matter_toaster" to="." method="_on_dark_matter_toaster_pressed"]

[connection signal="pressed" from="blue_dark_matter" to="." method="_on_blue_dark_matter_pressed"]

[connection signal="pressed" from="dark_matter_temp" to="." method="_on_dark_matter_temp_pressed"]

[connection signal="pressed" from="dark_matter_density" to="." method="_on_dark_matter_density_pressed"]

[connection signal="pressed" from="dark_matter_galaxy" to="." method="_on_dark_matter_galaxy_pressed"]

[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]


